--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   ],
   "require": {
     "php": "^7.2.5 || ^8.0",
-    "telesign/telesign": "^3.0.0"
+    "telesign/telesign": "3.0.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^8",
