Renaming variable name

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "homepage": "https://github.com/telesign/php_telesign_enterprise",
   "authors": [
     {
-      "name": "TeleSign Corp.",
+      "name": "Telesign Corp.",
       "email": "support@telesign.com",
       "homepage": "https://www.telesign.com"
     }
