--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,12 @@
     "composer/semver": "^3"
   },
   "autoload": {
-    "psr-4": { "telesign\\enterprise\\sdk\\": "src/" }
+    "psr-4": { "telesign\\enterprise\\sdk\\": "src/" },
+    "classmap": ["src/config.php"]
   },
   "autoload-dev": {
-    "psr-4": { "telesign\\enterprise\\sdk\\": "test/", "telesign\\sdk\\": "vendor/telesign/telesign/test/" }
+    "psr-4": { "telesign\\enterprise\\sdk\\": "test/", 
+    "telesign\\sdk\\": "vendor/telesign/telesign/test/" }
   },
   "scripts": {
     "test": "phpunit --bootstrap ./vendor/autoload.php test/ --coverage-clover coverage.xml --whitelist src/"
