--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,13 @@
   "description": "Telesign Full-service PHP SDK",
   "type": "library",
   "keywords": [
-    "telesign", "sms", "voice", "mobile", "authentication", "identity", "messaging"
+    "telesign",
+    "sms",
+    "voice",
+    "mobile",
+    "authentication",
+    "identity",
+    "messaging"
   ],
   "license": "MIT",
   "homepage": "https://github.com/telesign/php_telesign_enterprise",
@@ -16,19 +22,25 @@
   ],
   "require": {
     "php": "^7.2.5 || ^8.0",
-    "telesign/telesign": "^3.0 || ^4.0 || ^5.0"
+    "telesign/telesign": "^5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8",
     "composer/semver": "^3"
   },
   "autoload": {
-    "psr-4": { "telesign\\enterprise\\sdk\\": "src/" },
-    "classmap": ["src/config.php"]
+    "psr-4": {
+      "telesign\\enterprise\\sdk\\": "src/"
+    },
+    "classmap": [
+      "src/config.php"
+    ]
   },
   "autoload-dev": {
-    "psr-4": { "telesign\\enterprise\\sdk\\": "test/", 
-    "telesign\\sdk\\": "vendor/telesign/telesign/test/" }
+    "psr-4": {
+      "telesign\\enterprise\\sdk\\": "test/",
+      "telesign\\sdk\\": "vendor/telesign/telesign/test/"
+    }
   },
   "scripts": {
     "test": "phpunit --bootstrap ./vendor/autoload.php test/ --coverage-clover coverage.xml --whitelist src/"
